--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Setup leadminer-commercial
       run: |
         chmod +x "leadminer.io/leadminer-integration.sh"
-        "leadminer.io/leadminer-integration.sh" . https://${{ secrets.DEPLOY_PAT }}@github.com:ankaboot-source/leadminer-commercial.git
+        "leadminer.io/leadminer-integration.sh" . https://${{ secrets.DEPLOY_PAT }}@github.com/ankaboot-source/leadminer-commercial.git
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
