--- a/.github/workflows/push-supabase-functions.yml
+++ b/.github/workflows/push-supabase-functions.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches: [main]
     paths:
-      - 'saas-supabase/functions/**'
+      - 'supabase/functions/**'
   workflow_dispatch:
 
 jobs:
@@ -18,9 +18,9 @@ jobs:
         env:
           API_TOKEN_GITHUB: ${{ secrets.DEPLOY_PAT }}
         with:
-          source_file: 'saas-supabase/supabase'
+          source_file: 'supabase/functions'
           destination_repo: 'ankaboot-source/leadminer.io'
-          destination_folder: './saas-supabase'
+          destination_folder: './saas-supabase/supabase'
           user_email: 'deploy@leadminer.io'
           user_name: 'deploy-bot'
           commit_message: 'Updating supabase functions'
