add contact enrichement feature (#1463)
* add enrichement api

* Contact information UI + SQL get_contacts_table update

* add more columns and update export csv

* i18n + fix columns+ fix contactInformationEdit

* create component: ContactInformationSidebar

* create updateContact function & related RLS rules

- create updateContact function
- add related RLS rules
- fix Contact sidebar responsivness
- i18n

* Update contacts.ts

* UI fixes

- Avatar: rounded-full
- Textarea: 3 rows
- More spacing between email address and fullname editing

* Update sidebar.ts

* update contact: remove empty strings from arrays

* Fix contact information's table title width

* Update 20240705115620_add_persons_data_to_get_contacts_table.sql

* Update 20240705115620_add_persons_data_to_get_contacts_table.sql

* refactoring & integration

---------

Co-authored-by: Jaafoura <mehdi.jaafourag@gmail.com>

--- a/.env.example
+++ b/.env.example
@@ -92,3 +92,10 @@ REACHER_GMAIL_USE_API=true
 # This is optional, uncomment if you want to use. Refer to https://posthog.com/docs
 # POSTHOG_API_KEY =             # Posthog api key
 # POSTHOG_INSTANCE_ADDRESS =    # Posthog instance adress
+
+#### ZEROBOIUNCE ####
+# ZEROBOUNCE_API_KEY=
+
+#### VOILANORBERT ####
+# VOILANORBERT_USERNAME=any_string
+# VOILANORBERT_API_KEY=
