--- a/backend/.env.example
+++ b/backend/.env.example
@@ -79,3 +79,10 @@ REACHER_GMAIL_USE_API=true
 
 #### MAILERCHECK ####
 # MAILERCHECK_API_KEY=
+
+#### ZEROBOIUNCE ####
+# ZEROBOUNCE_API_KEY=
+
+#### VOILANORBERT ####
+# VOILANORBERT_USERNAME=any_string
+# VOILANORBERT_API_KEY=
