--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,15 +23,18 @@
     "@nuxt/test-utils": "^3.12.0",
     "@nuxtjs/i18n": "^8.3.1",
     "@nuxtjs/supabase": "^1.2.2",
-    "@nuxtjs/tailwindcss": "^6.11.4",
+    "@primevue/nuxt-module": "^4.0.1",
     "@types/js-cookie": "^3.0.6",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^9.1.0",
     "nuxt": "^3.10.3",
     "nuxt-primevue": "^0.3.1",
+    "postcss": "^8.4.39",
     "recheck": "^4.4.5",
     "sass": "^1.72.0",
+    "tailwindcss": "^3.4.6",
     "typescript": "^5.4.3",
     "vitest": "^1.4.0",
     "vue": "^3.4.21",
@@ -41,6 +44,7 @@
   "dependencies": {
     "@microsoft/fetch-event-source": "^2.0.1",
     "@pinia/nuxt": "^0.5.1",
+    "@primevue/themes": "^4.0.1",
     "@supabase/supabase-js": "^2.43.4",
     "js-cookie": "^3.0.5",
     "nitropack": "^2.9.4",
@@ -48,6 +52,6 @@
     "pinia": "^2.1.7",
     "prettier": "^2.8.7",
     "primeicons": "^7.0.0",
-    "primevue": "^3.49.1"
+    "primevue": "^4.0.1"
   }
 }
