--- a/.env.example
+++ b/.env.example
@@ -87,6 +87,7 @@ REACHER_GMAIL_USE_API=true
 
 #### MAILERCHECK ####
 # MAILERCHECK_API_KEY=
+LOAD_BALANCE_VERIFIERS=false
 
 ## POSTHOG ##
 # This is optional, uncomment if you want to use. Refer to https://posthog.com/docs
