--- a/backend/package.json
+++ b/backend/package.json
@@ -31,9 +31,10 @@
   "license": "GNU AGPL v3",
   "dependencies": {
     "@ankaboot.io/imap-autoconfig": "^0.0.2",
-    "@sentry/node": "^7.116.0",
+    "@faker-js/faker": "^8.4.1",
+    "@sentry/node": "^7.118.0",
     "@sentry/tracing": "^7.116.0",
-    "@supabase/supabase-js": "^2.43.4",
+    "@supabase/supabase-js": "^2.44.4",
     "axios": "^1.6.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -54,15 +55,14 @@
     "pg-format": "^1.0.4",
     "qs": "^6.12.2",
     "quoted-printable": "^1.0.1",
-    "simple-oauth2": "^5.0.0",
+    "simple-oauth2": "^5.0.1",
     "stripe": "^13.11.0",
     "throttled-queue": "^2.1.4",
     "winston": "^3.13.0",
     "winston-loki": "^6.1.2",
     "xoauth2": "^1.2.0",
     "zod": "^3.23.8",
-    "zod-error": "^1.5.0",
-    "@faker-js/faker": "^8.4.1"
+    "zod-error": "^1.5.0"
   },
   "devDependencies": {
     "@jest/globals": "^29.5.0",
