--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "@nuxt/eslint-config": "^0.2.0",
+    "@nuxt/image": "^1.7.0",
     "@nuxt/test-utils": "^3.12.0",
     "@nuxtjs/i18n": "^8.3.1",
     "@nuxtjs/supabase": "^1.2.2",
