Mobile UI tweaking + progress wrong finishing time (#1588)
* Mobile UI tweaking + progress wrong finishing time

* change Date.now() to performance.now()

* remove stillInprogress

* Remove unnecessary code

* Fix: package-lock.json

* change type from number to number | undefined

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,7 @@
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
-    "preview": "nuxt preview",
+    "preview": "cross-env PORT=8082 node .output/server/index.mjs",
     "postinstall": "nuxt prepare",
     "lint": "eslint --ext .vue,.ts,.js .",
     "lint:fix": "eslint --fix --ext .vue,.js,.ts .",
@@ -45,9 +45,9 @@
     "@microsoft/fetch-event-source": "^2.0.1",
     "@pinia/nuxt": "^0.5.1",
     "@primevue/themes": "^4.0.1",
-    "@supabase/supabase-js": "^2.43.4",
+    "@supabase/supabase-js": "^2.44.4",
     "js-cookie": "^3.0.5",
-    "nitropack": "^2.9.6",
+    "nitropack": "^2.9.7",
     "object-scan": "^19.0.5",
     "pinia": "^2.1.7",
     "prettier": "^2.8.7",
