--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,7 @@
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
-    "preview": "cross-env PORT=8082 node .output/server/index.mjs",
+    "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "lint": "eslint --ext .vue,.ts,.js .",
     "lint:fix": "eslint --fix --ext .vue,.js,.ts .",
@@ -18,41 +18,38 @@
     "prettier:fix": "prettier . --write"
   },
   "devDependencies": {
-    "@nuxt/devtools": "latest",
-    "@nuxt/eslint-config": "^0.2.0",
-    "@nuxt/test-utils": "^3.12.0",
-    "@nuxtjs/i18n": "^8.3.1",
-    "@nuxtjs/supabase": "^1.2.2",
-    "@primevue/nuxt-module": "^4.0.1",
-    "@types/js-cookie": "^3.0.6",
-    "autoprefixer": "^10.4.19",
-    "eslint": "^8.57.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-prettier": "^9.1.0",
-    "nuxt": "^3.10.3",
-    "nuxt-primevue": "^0.3.1",
-    "postcss": "^8.4.39",
-    "recheck": "^4.4.5",
-    "sass": "^1.72.0",
-    "tailwindcss": "^3.4.6",
-    "typescript": "^5.4.3",
-    "vitest": "^1.4.0",
-    "vue": "^3.4.21",
-    "vue-router": "^4.3.0",
-    "vue-tsc": "^1.8.27"
-  },
-  "dependencies": {
+    "nuxt": "^3.12.4",
+    "@nuxt/devtools": "^1.3.9",
+    "@nuxt/eslint-config": "^0.5.0",
+    "@nuxt/test-utils": "^3.14.0",
+    "vue": "^3.4.37",
+    "vue-router": "^4.4.3",
+    "vue-tsc": "^2.0.29",
     "@microsoft/fetch-event-source": "^2.0.1",
-    "@pinia/nuxt": "^0.5.1",
-    "@primevue/themes": "^4.0.1",
-    "@supabase/supabase-js": "^2.44.4",
+    "@pinia/nuxt": "^0.5.3",
+    "@primevue/themes": "^4.0.4",
+    "@supabase/supabase-js": "^2.45.1",
+    "@nuxtjs/i18n": "^8.3.3",
+    "@nuxtjs/supabase": "^1.3.5",
+    "@primevue/nuxt-module": "^4.0.4",
     "js-cookie": "^3.0.5",
     "nitropack": "^2.9.7",
     "object-scan": "^19.0.5",
-    "pinia": "^2.1.7",
-    "prettier": "^2.8.7",
+    "pinia": "^2.2.1",
+    "primevue": "^4.0.4",
     "primeicons": "^7.0.0",
-    "primevue": "^4.0.1",
-    "tailwindcss-primeui": "^0.3.4"
+    "tailwindcss": "^3.4.9",
+    "tailwindcss-primeui": "^0.3.4",
+    "postcss": "^8.4.41",
+    "@types/js-cookie": "^3.0.6",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^8.2.0",
+    "@vue/eslint-config-airbnb-with-typescript": "^8.0.0",
+    "eslint-config-prettier": "^9.1.0",
+    "prettier": "^3.3.3",
+    "recheck": "^4.4.5",
+    "sass": "^1.77.8",
+    "typescript": "^5.5.4",
+    "vitest": "^2.0.5"
   }
 }
