--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "install-deps": "npm i && npm run install-deps:backend && npm run install-deps:frontend",
     "install-deps:backend": "npm i --prefix ./backend",
     "install-deps:frontend": "npm i --prefix ./frontend",
+    "dev:generate-env": "bash ./generate_env.sh .env.master.dev",
     "dev:supabase": "supabase start",
     "dev:frontend": "npm run dev --prefix ./frontend",
     "dev:backend-api": "npm run dev-api --prefix ./backend",
     "dev:backend-worker": "npm run dev-worker --prefix ./backend",
-    "dev:backend-email-worker": "npm run dev-email-worker --prefix ./backend"
+    "dev:backend-email-worker": "npm run dev-email-worker --prefix ./backend",
+    "dev:backend-mock-external-services": "npm run dev-mock-external-services --prefix ./backend"
   },
   "author": "ankaboot",
   "license": "AGPL-3.0",
