--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,44 +12,40 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "lint": "eslint --ext .vue,.ts,.js .",
-    "lint:fix": "eslint --fix --ext .vue,.js,.ts .",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix .",
     "prettier": "prettier . --check",
     "prettier:fix": "prettier . --write"
   },
   "devDependencies": {
-    "nuxt": "^3.12.4",
-    "@nuxt/devtools": "^1.3.9",
-    "@nuxt/eslint-config": "^0.5.0",
-    "@nuxt/test-utils": "^3.14.0",
-    "vue": "^3.4.37",
-    "vue-router": "^4.4.3",
-    "vue-tsc": "^2.0.29",
     "@microsoft/fetch-event-source": "^2.0.1",
-    "@pinia/nuxt": "^0.5.3",
-    "@primevue/themes": "^4.0.4",
-    "@supabase/supabase-js": "^2.45.1",
-    "@nuxtjs/i18n": "^8.3.3",
+    "@nuxt/devtools": "^1.4.1",
+    "@nuxt/eslint": "^0.5.3",
+    "@nuxt/test-utils": "^3.14.1",
+    "@nuxtjs/i18n": "^8.5.1",
     "@nuxtjs/supabase": "^1.3.5",
-    "@primevue/nuxt-module": "^4.0.4",
-    "js-cookie": "^3.0.5",
-    "nitropack": "^2.9.7",
-    "object-scan": "^19.0.5",
-    "pinia": "^2.2.1",
-    "primevue": "^4.0.4",
-    "primeicons": "^7.0.0",
-    "tailwindcss": "^3.4.9",
-    "tailwindcss-primeui": "^0.3.4",
-    "postcss": "^8.4.41",
+    "@pinia/nuxt": "^0.5.4",
+    "@primevue/nuxt-module": "^4.0.5",
+    "@primevue/themes": "^4.0.5",
+    "@supabase/supabase-js": "^2.45.2",
     "@types/js-cookie": "^3.0.6",
     "autoprefixer": "^10.4.20",
-    "eslint": "^8.2.0",
-    "@vue/eslint-config-airbnb-with-typescript": "^8.0.0",
-    "eslint-config-prettier": "^9.1.0",
+    "js-cookie": "^3.0.5",
+    "nitropack": "^2.9.7",
+    "nuxt": "^3.13.0",
+    "object-scan": "^19.0.5",
+    "pinia": "^2.2.2",
+    "postcss": "^8.4.41",
     "prettier": "^3.3.3",
+    "primeicons": "^7.0.0",
+    "primevue": "^4.0.5",
     "recheck": "^4.4.5",
     "sass": "^1.77.8",
+    "tailwindcss": "^3.4.10",
+    "tailwindcss-primeui": "^0.3.4",
     "typescript": "^5.5.4",
-    "vitest": "^2.0.5"
+    "vitest": "^2.0.5",
+    "vue": "^3.4.38",
+    "vue-tsc": "^2.0.29"
   }
 }
