fix ui spacing & realtime & contact update (#1658)

--- a/.env.master.dev
+++ b/.env.master.dev
@@ -56,10 +56,10 @@ REDIS_CONSUMER_BATCH_SIZE = 100   # ( REQUIRED ) The entries to read from each s
 REDIS_EMAIL_VERIFICATION_CONSUMER_BATCH_SIZE = 500 # The entries to read from each stream
 
 ## OAUTH PROVIDERS ##
-GOOGLE_CLIENT_ID = "" # ( REQUIRED ) Google client ID
-GOOGLE_SECRET = ""     # ( REQUIRED ) Google secret
-AZURE_CLIENT_ID = ""  # ( REQUIRED ) Azure client ID
-AZURE_SECRET = "" # ( REQUIRED ) Azure secret
+GOOGLE_CLIENT_ID=569893672106-91u34arftup5sq5fmg92fko5cb0tjahn.apps.googleusercontent.com # ( REQUIRED ) Google client ID
+GOOGLE_SECRET=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     # ( REQUIRED ) Google secret
+AZURE_CLIENT_ID=1ee6bd18-c687-40ec-970e-6ca00b4e8e96  # ( REQUIRED ) Azure client ID
+AZURE_SECRET=AF18Q~~vsjdA9GKuQi4PDT5G3MLZPa1YqwE9Ockf # ( REQUIRED ) Azure secret
 
 ## SENTRY DSN ##
 # https://sentry.io
@@ -102,6 +102,6 @@ REACHER_GMAIL_USE_API =true
 #
 
 # Voilanorbert: https://api.voilanorbert.com/2018-01-08/
-VOILANORBERT_URL = http://127.0.0.1:8083/voilanorbert/2018-01-08/enrich
+VOILANORBERT_URL = http://127.0.0.1:8083/voilanorbert/2018-01-08/
 VOILANORBERT_USERNAME = any_string
 VOILANORBERT_API_KEY = test-api-key
