fix dev env file

--- a/.env.master.dev
+++ b/.env.master.dev
@@ -1,6 +1,6 @@
 # ==============| Common |============= #
 
-ENABLE_CREDIT = false   # ( REQUIRED ) Enables a credit features
+ENABLE_CREDIT = true   # ( REQUIRED ) Enables a credit features
 
 # ==============| Frontend |============= #
 
@@ -35,9 +35,9 @@ PG_CONNECTION_STRING = postgresql://postgres:postgres@127.0.0.1:54322/postgres  
 
 ## CREDITS ##
 CONTACT_CREDIT = 1      # ( REQUIRED WHEN ENABLE_CREDIT ) Number of credits to deduct per contact
-STRIPE_API_KEY =        # ( REQUIRED WHEN ENABLE_CREDIT )
-STRIPE_API_VERSION =    # ( REQUIRED WHEN ENABLE_CREDIT )
-STRIPE_WEBHOOK_SECRET = # ( REQUIRED WHEN ENABLE_CREDIT )
+STRIPE_API_KEY =  'replace-when-testing-stripe'      # ( REQUIRED WHEN ENABLE_CREDIT )
+STRIPE_API_VERSION =  'replace-when-testing-stripe'  # ( REQUIRED WHEN ENABLE_CREDIT )
+STRIPE_WEBHOOK_SECRET = 'replace-when-testing-stripe' # ( REQUIRED WHEN ENABLE_CREDIT )
 
 ## IMAP ##
 IMAP_FETCH_BODY = false         # Enable or disable fetching Email bodies
@@ -56,10 +56,10 @@ REDIS_CONSUMER_BATCH_SIZE = 100   # ( REQUIRED ) The entries to read from each s
 REDIS_EMAIL_VERIFICATION_CONSUMER_BATCH_SIZE = 500 # The entries to read from each stream
 
 ## OAUTH PROVIDERS ##
-GOOGLE_CLIENT_ID=569893672106-91u34arftup5sq5fmg92fko5cb0tjahn.apps.googleusercontent.com # ( REQUIRED ) Google client ID
-GOOGLE_SECRET=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     # ( REQUIRED ) Google secret
-AZURE_CLIENT_ID=1ee6bd18-c687-40ec-970e-6ca00b4e8e96  # ( REQUIRED ) Azure client ID
-AZURE_SECRET=AF18Q~~vsjdA9GKuQi4PDT5G3MLZPa1YqwE9Ockf # ( REQUIRED ) Azure secret
+GOOGLE_CLIENT_ID = 569893672106-91u34arftup5sq5fmg92fko5cb0tjahn.apps.googleusercontent.com # ( REQUIRED ) Google client ID
+GOOGLE_SECRET = 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     # ( REQUIRED ) Google secret
+AZURE_CLIENT_ID = 1ee6bd18-c687-40ec-970e-6ca00b4e8e96  # ( REQUIRED ) Azure client ID
+AZURE_SECRET = AF18Q~~vsjdA9GKuQi4PDT5G3MLZPa1YqwE9Ockf # ( REQUIRED ) Azure secret
 
 ## SENTRY DSN ##
 # https://sentry.io
