--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
   "private": true,
   "scripts": {
     "test": "vitest",
+    "coverage": "vitest run --coverage",
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
