--- a/.deepsource.toml
+++ b/.deepsource.toml
@@ -15,6 +15,10 @@ exclude_patterns = [
 [[analyzers]]
 name = "test-coverage"
 enabled = true
+exclude_patterns = [
+  "frontend/**"
+]
+
 
 [[analyzers]]
 name = "sql"
