use CREDITS_PER_CONTACT env
use CREDITS_PER_CONTACT env instead of CONTACT_CREDIT

--- a/.env.master.dev
+++ b/.env.master.dev
@@ -1,6 +1,7 @@
 # ==============| Common |============= #
 
 ENABLE_CREDIT = true   # ( REQUIRED ) Enables a credit features
+CREDITS_PER_CONTACT = 1      # ( REQUIRED WHEN ENABLE_CREDIT ) Number of credits to deduct per contact
 
 # ==============| Frontend |============= #
 
@@ -34,7 +35,6 @@ SUPABASE_SECRET_PROJECT_TOKEN = eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJ
 PG_CONNECTION_STRING = postgresql://postgres:postgres@127.0.0.1:54322/postgres  # ( REQUIRED ) Postgres connection string
 
 ## CREDITS ##
-CONTACT_CREDIT = 1      # ( REQUIRED WHEN ENABLE_CREDIT ) Number of credits to deduct per contact
 STRIPE_API_KEY =  'replace-when-testing-stripe'      # ( REQUIRED WHEN ENABLE_CREDIT )
 STRIPE_API_VERSION =  'replace-when-testing-stripe'  # ( REQUIRED WHEN ENABLE_CREDIT )
 STRIPE_WEBHOOK_SECRET = 'replace-when-testing-stripe' # ( REQUIRED WHEN ENABLE_CREDIT )
