--- a/.env.master.prod
+++ b/.env.master.prod
@@ -1,6 +1,7 @@
 # ==============| Common |============= #
 
 ENABLE_CREDIT = false   # ( REQUIRED ) Enables a credit features
+CREDITS_PER_CONTACT = 1      # ( REQUIRED WHEN ENABLE_CREDIT ) Number of credits to deduct per contact
 
 # ==============| Frontend |============= #
 
@@ -34,7 +35,6 @@ SUPABASE_SECRET_PROJECT_TOKEN = # ( REQUIRED ) Supabase project token
 PG_CONNECTION_STRING =          # ( REQUIRED ) Postgres connection string
 
 ## CREDITS ##
-CONTACT_CREDIT = 1      # ( REQUIRED WHEN ENABLE_CREDIT ) Number of credits to deduct per contact
 STRIPE_API_KEY =        # ( REQUIRED WHEN ENABLE_CREDIT )
 STRIPE_API_VERSION =    # ( REQUIRED WHEN ENABLE_CREDIT )
 STRIPE_WEBHOOK_SECRET = # ( REQUIRED WHEN ENABLE_CREDIT )
