add CREDITS_PER_CONTACT to dockerfile

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -19,6 +19,7 @@ ENV POSTHOG_API_KEY ${POSTHOG_API_KEY}
 ENV POSTHOG_INSTANCE_ADDRESS ${POSTHOG_INSTANCE_ADDRESS}
 ENV ENABLE_CREDIT ${ENABLE_CREDIT}
 ENV EXTERNAL_REFILL_CREDITS_LINK ${EXTERNAL_REFILL_CREDITS_LINK}
+ENV CREDITS_PER_CONTACT ${CREDITS_PER_CONTACT}
 ENV SAAS_SUPABASE_PROJECT_URL ${SAAS_SUPABASE_PROJECT_URL}
 ENV SAAS_SUPABASE_ANON_KEY ${SAAS_SUPABASE_ANON_KEY}
 
