--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,6 +56,7 @@ services:
         POSTHOG_INSTANCE_ADDRESS: ${POSTHOG_INSTANCE_ADDRESS}
         ENABLE_CREDIT: ${ENABLE_CREDIT}
         EXTERNAL_REFILL_CREDITS_LINK: ${EXTERNAL_REFILL_CREDITS_LINK}
+        CREDITS_PER_CONTACT: ${CREDITS_PER_CONTACT}
         SAAS_SUPABASE_PROJECT_URL: ${SAAS_SUPABASE_PROJECT_URL}
         SAAS_SUPABASE_ANON_KEY: ${SAAS_SUPABASE_ANON_KEY}
 
