--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,9 +31,9 @@
     "@types/js-cookie": "^3.0.6",
     "autoprefixer": "^10.4.20",
     "js-cookie": "^3.0.5",
-    "material-icons": "^1.13.12",
     "nitropack": "^2.9.7",
     "nuxt": "^3.13.2",
+    "nuxt-mdi": "^2.1.1",
     "object-scan": "^19.0.5",
     "pinia": "^2.2.2",
     "postcss": "^8.4.47",
