--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "js-cookie": "^3.0.5",
     "nitropack": "^2.9.7",
     "nuxt": "^3.13.2",
+    "nuxt-mdi": "^2.1.1",
     "object-scan": "^19.0.5",
     "pinia": "^2.2.2",
     "postcss": "^8.4.47",
