add the dig env

--- a/.env.master.prod
+++ b/.env.master.prod
@@ -105,3 +105,7 @@ ZEROBOUNCE_API_KEY =
 VOILANORBERT_URL = https://api.voilanorbert.com/2018-01-08/
 VOILANORBERT_USERNAME = any_string
 VOILANORBERT_API_KEY =
+
+# Thedig
+THEDIG_URL =
+THEDIG_API_KEY =
