1687 enrich with thedig (#1758)

--- a/.env.master.dev
+++ b/.env.master.dev
@@ -95,3 +95,7 @@ REACHER_GMAIL_USE_API =true
 VOILANORBERT_URL = http://127.0.0.1:8083/voilanorbert/2018-01-08/
 VOILANORBERT_USERNAME = any_string
 VOILANORBERT_API_KEY = test-api-key
+
+#Thedig
+THEDIG_URL = 
+THEDIG_API_KEY =
