fix thedig default

--- a/.env.master.dev
+++ b/.env.master.dev
@@ -97,5 +97,5 @@ VOILANORBERT_USERNAME = any_string
 VOILANORBERT_API_KEY = test-api-key
 
 #Thedig
-THEDIG_URL = 
-THEDIG_API_KEY =
+THEDIG_URL = _
+THEDIG_API_KEY = _
