add: reduce supabase auth JWT size

--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -114,3 +114,8 @@ redirect_uri = ""
 # Overrides the default auth provider URL. Used to support self-hosted gitlab, single-tenant Azure,
 # or any other third-party OIDC providers.
 url = ""
+
+# https://supabase.com/docs/guides/auth/auth-hooks
+[auth.hook.custom_access_token]
+enabled = true
+uri = "pg-functions://postgres/public/custom_access_token_hook"
