add proxycurl env vars

--- a/.env.master.dev
+++ b/.env.master.dev
@@ -97,5 +97,9 @@ VOILANORBERT_USERNAME = any_string
 VOILANORBERT_API_KEY = test-api-key
 
 #Thedig
-THEDIG_URL = _
+THEDIG_URL = http://127.0.0.1:8083/thedig/
 THEDIG_API_KEY = _
+
+#PROXYCURL
+PROXYCURL_URL = http://127.0.0.1:8083/proxycurl/
+PROXYCURL_API_KEY = _
