add image reverse proxy

--- a/.env.master.prod
+++ b/.env.master.prod
@@ -1,5 +1,6 @@
 # ==============| Frontend |============= #
 
+IMAGE_PROXY_URL = # ( OPTIONAL ) Proxy to check, validate images 
 AVERAGE_EXTRACTION_RATE = 130     # for estimating time based on the number of extracted, fetched messages per second.
 SERVER_ENDPOINT =                 # ( REQUIRED ) URL of the Backend server.
 SAAS_SUPABASE_PROJECT_URL =       # ( REQUIRED ) Supabase project URL.
