--- a/.env.master.dev
+++ b/.env.master.dev
@@ -1,6 +1,6 @@
 # ==============| Frontend |============= #
 
-IMAGE_PROXY_URL = # ( OPTIONAL ) Proxy to check, validate images 
+IMAGE_REVERSE_PROXY = # ( OPTIONAL ) Proxy to check, validate images 
 AVERAGE_EXTRACTION_RATE = 130   # for estimating time based on the number of extracted, fetched messages per second.
 SERVER_ENDPOINT =  http://localhost:8081    # ( REQUIRED ) URL of the Backend server.
 SAAS_SUPABASE_PROJECT_URL =  http://127.0.0.1:54321 # ( REQUIRED ) Supabase saas project URL.
