--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,7 +3,7 @@ FROM node:lts-alpine as build-stage
 ARG SERVER_ENDPOINT
 ARG SUPABASE_PROJECT_URL
 ARG SUPABASE_ANON_KEY
-ARG IMAGE_PROXY_URL
+ARG IMAGE_REVERSE_PROXY
 ARG AVERAGE_EXTRACTION_RATE
 ARG POSTHOG_API_KEY
 ARG POSTHOG_INSTANCE_ADDRESS
@@ -15,7 +15,7 @@ ARG SAAS_SUPABASE_ANON_KEY
 ENV SERVER_ENDPOINT ${SERVER_ENDPOINT}
 ENV SUPABASE_PROJECT_URL ${SUPABASE_PROJECT_URL}
 ENV SUPABASE_ANON_KEY ${SUPABASE_ANON_KEY}
-ENV IMAGE_PROXY_URL ${IMAGE_PROXY_URL}
+ENV IMAGE_REVERSE_PROXY ${IMAGE_REVERSE_PROXY}
 ENV AVERAGE_EXTRACTION_RATE ${AVERAGE_EXTRACTION_RATE}
 ENV POSTHOG_API_KEY ${POSTHOG_API_KEY}
 ENV POSTHOG_INSTANCE_ADDRESS ${POSTHOG_INSTANCE_ADDRESS}
