use image reverse proxy (#1874)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,6 +50,7 @@ services:
         SERVER_ENDPOINT: ${LEADMINER_API_HOST}
         SUPABASE_PROJECT_URL: ${SUPABASE_PROJECT_URL}
         SUPABASE_ANON_KEY: ${SUPABASE_ANON_KEY}
+        IMAGE_REVERSE_PROXY: ${IMAGE_REVERSE_PROXY}
         AVERAGE_EXTRACTION_RATE: ${AVERAGE_EXTRACTION_RATE}
         BANNER_IMAGE_URL: ${BANNER_IMAGE_URL}
         POSTHOG_API_KEY: ${POSTHOG_API_KEY}
