--- a/.github/workflows/ci-pr.yml
+++ b/.github/workflows/ci-pr.yml
@@ -54,7 +54,7 @@ jobs:
         run: cd backend && ls -R && cat lcov.info
 
       - name: Display code coverage within Pull request
-      - uses: jgillick/test-coverage-reporter@main
+        uses: jgillick/test-coverage-reporter@main
         with:
           coverage-file: backend/coverage/coverage-summary.json
           access-token: ${{ secrets.GITHUB_TOKEN }}
