fix DeepSource error 'Make sure you are running the CLI from a git repository'

--- a/.github/workflows/ci-pr.yml
+++ b/.github/workflows/ci-pr.yml
@@ -24,6 +24,7 @@ jobs:
               - 'backend/**'
             frontend:
               - 'frontend/**'
+      - uses: actions/checkout@v4
       - name: Create empty coverage report
         run: touch ./lcov.info
       - name: Report code coverage to Deepsource
