config db and loki label from env

--- a/.env.master.prod
+++ b/.env.master.prod
@@ -13,6 +13,7 @@ EXTERNAL_REFILL_CREDITS_LINK =    # ( OPTIONAL ) External link for users to refi
 
 # ==============| Backend |============= #
 
+APP_NAME  = leadminer
 FRONTEND_HOST =             # ( REQUIRED ) 
 LEADMINER_API_PORT = 8081   # ( REQUIRED )
 LEADMINER_API_HOST =        # ( REQUIRED )
@@ -41,6 +42,7 @@ REDIS_HOST = localhost  # ( REQUIRED ) Redis host
 REDIS_PORT = 6379       # ( REQUIRED ) Redis port
 REDIS_USERNAME =        # ( OPTIONAL ) Redis username
 REDIS_PASSWORD =        # ( OPTIONAL ) Redis password
+REDIS_DB = 0            # ( REQUIRED ) Redis db
 REDIS_TLS = false       # ( REQUIRED ) Enable or disable TLS for Redis
 REDIS_EXPIRATION_TIMEOUT = 7776000 # ( REQUIRED ) Expiration timeout (90 days ) for Redis entries
 REDIS_CONSUMER_BATCH_SIZE = 100   # ( REQUIRED ) The entries to read from each stream
