use env var instead of const for redis pubsub & streams

--- a/.env.master.prod
+++ b/.env.master.prod
@@ -48,6 +48,10 @@ REDIS_EXPIRATION_TIMEOUT = 7776000 # ( REQUIRED ) Expiration timeout (90 days ) 
 REDIS_CONSUMER_BATCH_SIZE = 100   # ( REQUIRED ) The entries to read from each stream
 REDIS_EMAIL_VERIFICATION_CONSUMER_BATCH_SIZE = 500 # The entries to read from each stream
 
+REDIS_PUBSUB_COMMUNICATION_CHANNEL =     # (REQUIRED) PubSub channel all workers listen to
+REDIS_EXTRACTING_STREAM_CONSUMER_GROUP = # (REQUIRED) Consumer group for extracting worker
+REDIS_CLEANING_STREAM_CONSUMER_GROUP =   # (REQUIRED) consumer group for cleaning worker
+
 ## OAUTH PROVIDERS ##
 GOOGLE_CLIENT_ID = # ( REQUIRED ) Google client ID
 GOOGLE_SECRET =    # ( REQUIRED ) Google secret
