--- a/.env.master.dev
+++ b/.env.master.dev
@@ -48,6 +48,10 @@ REDIS_EXPIRATION_TIMEOUT = 7776000 # ( REQUIRED ) Expiration timeout (90 days ) 
 REDIS_CONSUMER_BATCH_SIZE = 100   # ( REQUIRED ) The entries to read from each stream
 REDIS_EMAIL_VERIFICATION_CONSUMER_BATCH_SIZE = 500 # The entries to read from each stream
 
+REDIS_PUBSUB_COMMUNICATION_CHANNEL = 'stream-management'   # PubSub channel all workers listen to
+REDIS_EXTRACTING_STREAM_CONSUMER_GROUP = 'email-messages-consumer-group'   # Consumer group for extracting worker
+REDIS_CLEANING_STREAM_CONSUMER_GROUP = 'email-verification-consumer-group' # consumer group for cleaning worker
+
 ## OAUTH PROVIDERS ##
 GOOGLE_CLIENT_ID = 569893672106-91u34arftup5sq5fmg92fko5cb0tjahn.apps.googleusercontent.com # ( REQUIRED ) Google client ID
 GOOGLE_SECRET = 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     # ( REQUIRED ) Google secret
