--- a/.github/workflows/auto-merge-snyk-pr.yml
+++ b/.github/workflows/auto-merge-snyk-pr.yml
@@ -22,6 +22,7 @@ jobs:
       - name: Get PR from snyk/* branch
         id: pr
         run: |
+          sleep 10 # delay the PR check to prevent checking before the PR is opened
           echo "Looking for PR related to ${{ github.ref_name }}"
           pr_number=$(gh pr list --state open --head ${{ github.ref_name }} --json number -q '.[0].number')
           if [ -z "$pr_number" ]; then
