--- a/.github/workflows/auto-merge-snyk-pr.yml
+++ b/.github/workflows/auto-merge-snyk-pr.yml
@@ -49,8 +49,8 @@ jobs:
           fi
 
       # Merge the pull request
-      - name: Auto Merge Snyk PR
-        env:
-          GH_TOKEN: ${{ github.token }}
-        run: |
-          gh pr merge ${{env.pr_number}} --squash --delete-branch
+#      - name: Auto Merge Snyk PR
+#        env:
+#          GH_TOKEN: ${{ github.token }}
+#        run: |
+#          gh pr merge ${{env.pr_number}} --squash --delete-branch
