--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,11 @@ on:
     paths:
       - 'backend/**'
       - 'frontend/**'
+  workflow_run:
+    workflows: ["Auto Merge Snyk Branches"]
+    types:
+      - completed
+
 
 jobs:
   backend:
