--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,6 +49,7 @@
     "typescript": "^5.6.3",
     "vitest": "^2.1.2",
     "vue": "^3.5.12",
-    "vue-tsc": "^2.1.6"
+    "vue-tsc": "^2.1.6",
+    "convert-csv-to-json": "^2.49.0"
   }
 }
