--- a/.env.master.dev
+++ b/.env.master.dev
@@ -55,8 +55,8 @@ REDIS_CLEANING_STREAM_CONSUMER_GROUP = 'email-verification-consumer-group' # con
 ## OAUTH PROVIDERS ##
 GOOGLE_CLIENT_ID = 569893672106-91u34arftup5sq5fmg92fko5cb0tjahn.apps.googleusercontent.com # ( REQUIRED ) Google client ID
 GOOGLE_SECRET = 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     # ( REQUIRED ) Google secret
-AZURE_CLIENT_ID = 80cef87e-a188-4873-af70-24e026a69181  # ( REQUIRED ) Azure client ID
-AZURE_SECRET = fIn8Q~EczSwFeeF45iFLNSY7F-fhs-lIs2U1KdCa # ( REQUIRED ) Azure secret
+AZURE_CLIENT_ID = your_azure_client_id # ( REQUIRED ) Azure client ID
+AZURE_SECRET = your_azure_client_secret # ( REQUIRED ) Azure secret
 
 ## SENTRY DSN ##
 # https://sentry.io
