--- a/backend/package.json
+++ b/backend/package.json
@@ -70,7 +70,7 @@
     "imap": {
       "semver": "^7.6.3"
     },
-    "glob": "10.4.2"
+    "glob": "^10.4.5"
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
