--- a/backend/package.json
+++ b/backend/package.json
@@ -30,72 +30,79 @@
   "author": "ankaboot",
   "license": "GNU AGPL v3",
   "dependencies": {
-    "@ankaboot.io/imap-autoconfig": "^0.1.1",
-    "@faker-js/faker": "^9.2.0",
-    "@sentry/tracing": "^7.120.1",
-    "@sentry/node": "^8.43.0",
-    "@supabase/supabase-js": "^2.47.5",
+    "@ankaboot.io/imap-autoconfig": "^0.1.2",
+    "@faker-js/faker": "^9.3.0",
+    "@sentry/node": "^8.47.0",
+    "@sentry/tracing": "^7.114.0",
+    "@supabase/supabase-js": "^2.47.10",
     "axios": "^1.7.9",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "csv-stringify": "^6.5.2",
     "dotenv": "^16.4.7",
-    "express": "^4.21.1",
+    "express": "^4.21.2",
     "express-sse": "github:omgimalexis/express-sse",
     "generic-pool": "^3.9.0",
     "google-auth-library": "^9.15.0",
     "html-entities": "^2.5.2",
     "imap": "^0.8.19",
-    "imap-autoconfig": "^0.1.5",
-    "ioredis": "^5.4.1",
+    "ioredis": "^5.4.2",
     "jsonwebtoken": "^9.0.2",
     "nanoid": "^3.3.8",
-    "nodemon": "^3.1.7",
+    "nodemon": "^3.1.9",
     "pg": "^8.13.1",
     "pg-format": "^1.0.4",
-    "qs": "^6.12.3",
+    "qs": "^6.13.1",
     "quoted-printable": "^1.0.1",
     "simple-oauth2": "^5.1.0",
-    "stripe": "^17.4.0",
+    "stripe": "^17.5.0",
     "throttled-queue": "^2.1.4",
-    "winston": "^3.15.0",
+    "winston": "^3.17.0",
     "winston-loki": "^6.1.3",
     "xoauth2": "^1.2.0",
     "zod": "^3.24.1",
     "zod-error": "^1.5.0"
   },
+  "overrides": {
+    "stripe-cli": {
+      "uuid": "^11.0.4"
+    },
+    "imap": {
+      "semver": "^7.6.3"
+    }
+  },
   "devDependencies": {
-    "@jest/globals": "^29.5.0",
-    "@types/cookie-parser": "^1.4.3",
-    "@types/cors": "^2.8.13",
+    "@jest/globals": "^29.7.0",
+    "@types/cookie-parser": "^1.4.8",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.17",
-    "@types/imap": "^0.8.40",
-    "@types/ioredis-mock": "^8.2.2",
-    "@types/jsonwebtoken": "^9.0.2",
-    "@types/node": "^18.16.19",
-    "@types/pg": "^8.6.6",
-    "@types/pg-format": "^1.0.2",
-    "@types/quoted-printable": "^1.0.0",
-    "@types/simple-oauth2": "^5.0.4",
-    "@types/supertest": "^2.0.12",
+    "@types/imap": "^0.8.42",
+    "@types/ioredis-mock": "^8.2.5",
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/node": "^22.10.5",
+    "@types/pg": "^8.11.10",
+    "@types/pg-format": "^1.0.5",
+    "@types/quoted-printable": "^1.0.2",
+    "@types/simple-oauth2": "^5.0.7",
+    "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
-    "axios-mock-adapter": "^1.22.0",
+    "axios-mock-adapter": "^2.1.0",
     "eslint": "^8.39.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
-    "ioredis-mock": "^8.8.1",
-    "jest": "^29.5.0",
-    "node-mocks-http": "^1.12.2",
-    "prettier": "2.7.1",
+    "ioredis-mock": "^8.9.0",
+    "jest": "^29.7.0",
+    "node-mocks-http": "^1.16.2",
+    "prettier": "3.4.2",
     "recheck": "^4.4.5",
     "stripe-cli": "^0.1.0",
-    "supertest": "^6.3.1",
-    "ts-jest": "^29.1.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.0.4"
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.2"
   },
   "engines": {
     "node": ">=15.0.0"
