Use localhost for frontend

--- a/.env.master.dev
+++ b/.env.master.dev
@@ -14,7 +14,7 @@ EXTERNAL_REFILL_CREDITS_LINK =  # ( OPTIONAL ) External link for users to refill
 # ==============| Backend |============= #
 
 APP_NAME  = leadminer
-FRONTEND_HOST = http://127.0.0.1:8082   # ( REQUIRED ) 
+FRONTEND_HOST = http://localhost:8082   # ( REQUIRED ) 
 LEADMINER_API_PORT = 8081   # ( REQUIRED )
 LEADMINER_API_HOST = http://localhost:8081 # ( REQUIRED )
 
