--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "@primevue/themes": "^4.1.0",
     "@supabase/supabase-js": "^2.45.4",
     "@types/js-cookie": "^3.0.6",
+    "@vite-pwa/nuxt": "^0.10.6",
     "autoprefixer": "^10.4.20",
     "convert-csv-to-json": "^2.49.0",
     "js-cookie": "^3.0.5",
