--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,16 +25,15 @@
     "@nuxt/test-utils": "^3.14.3",
     "@nuxtjs/i18n": "^9.1.0",
     "@nuxtjs/supabase": "^1.4.1",
-    "@pinia/nuxt": "^0.9.0",
+    "@pinia/nuxt": "^0.7.0",
     "@primevue/nuxt-module": "^4.1.0",
     "@primevue/themes": "^4.1.0",
     "@supabase/supabase-js": "^2.45.4",
     "@types/js-cookie": "^3.0.6",
     "autoprefixer": "^10.4.20",
-    "convert-csv-to-json": "^2.49.0",
     "js-cookie": "^3.0.5",
     "nitropack": "^2.9.7",
-    "nuxt": "^3.15.1",
+    "nuxt": "^3.13.2",
     "nuxt-mdi": "^2.1.1",
     "nuxt-security": "^2.0.0",
     "object-scan": "^19.0.5",
@@ -46,10 +45,11 @@
     "recheck": "^4.4.5",
     "sass": "^1.79.5",
     "tailwindcss": "^3.4.13",
-    "tailwindcss-primeui": "^0.4.0",
+    "tailwindcss-primeui": "^0.3.4",
     "typescript": "^5.6.3",
     "vitest": "^2.1.2",
     "vue": "^3.5.12",
-    "vue-tsc": "^2.2.0"
+    "vue-tsc": "^2.1.6",
+    "convert-csv-to-json": "^2.49.0"
   }
 }
