--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,37 +19,37 @@
   },
   "devDependencies": {
     "@microsoft/fetch-event-source": "^2.0.1",
-    "@nuxt/devtools": "^1.6.0",
-    "@nuxt/eslint": "^0.7.1",
-    "@nuxt/scripts": "^0.9.4",
-    "@nuxt/test-utils": "^3.14.3",
-    "@nuxtjs/i18n": "^9.1.0",
-    "@nuxtjs/supabase": "^1.4.1",
+    "@nuxt/devtools": "^1.7.0",
+    "@nuxt/eslint": "^0.7.5",
+    "@nuxt/scripts": "^0.9.5",
+    "@nuxt/test-utils": "^3.15.4",
+    "@nuxtjs/i18n": "^9.1.1",
+    "@nuxtjs/supabase": "^1.4.5",
     "@pinia/nuxt": "^0.9.0",
-    "@primevue/nuxt-module": "^4.1.0",
-    "@primevue/themes": "^4.1.0",
-    "@supabase/supabase-js": "^2.45.4",
+    "@primevue/nuxt-module": "^4.2.5",
+    "@primevue/themes": "^4.2.5",
+    "@supabase/supabase-js": "^2.47.14",
     "@types/js-cookie": "^3.0.6",
     "autoprefixer": "^10.4.20",
-    "convert-csv-to-json": "^2.49.0",
     "js-cookie": "^3.0.5",
-    "nitropack": "^2.9.7",
+    "nitropack": "^2.10.4",
     "nuxt": "^3.15.1",
     "nuxt-mdi": "^2.1.1",
-    "nuxt-security": "^2.0.0",
+    "nuxt-security": "^2.1.5",
     "object-scan": "^19.0.5",
-    "pinia": "^2.2.4",
-    "postcss": "^8.4.47",
-    "prettier": "^3.3.3",
+    "pinia": "^2.3.0",
+    "postcss": "^8.5.1",
+    "prettier": "^3.4.2",
     "primeicons": "^7.0.0",
-    "primevue": "^4.1.0",
+    "primevue": "^4.2.5",
     "recheck": "^4.4.5",
-    "sass": "^1.79.5",
-    "tailwindcss": "^3.4.13",
+    "sass": "^1.83.4",
+    "tailwindcss": "^3.4.17",
     "tailwindcss-primeui": "^0.4.0",
-    "typescript": "^5.6.3",
-    "vitest": "^2.1.2",
-    "vue": "^3.5.12",
-    "vue-tsc": "^2.2.0"
+    "typescript": "^5.7.3",
+    "vitest": "^2.1.8",
+    "vue": "^3.5.13",
+    "vue-tsc": "^2.2.0",
+    "convert-csv-to-json": "^2.50.0"
   }
 }
