--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "@primevue/themes": "^4.2.5",
     "@supabase/supabase-js": "^2.47.14",
     "@types/js-cookie": "^3.0.6",
+    "@vite-pwa/nuxt": "^0.10.6",
     "autoprefixer": "^10.4.20",
     "js-cookie": "^3.0.5",
     "nitropack": "^2.10.4",
