more package.json consistency

--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "dev:supabase": "supabase start",
     "dev:supabase-functions": "supabase functions serve",
     "dev:frontend": "npm run dev --prefix ./frontend",
-    "dev:backend-api": "npm run dev-api --prefix ./backend",
-    "dev:backend-worker": "npm run dev-worker --prefix ./backend",
-    "dev:backend-email-worker": "npm run dev-email-worker --prefix ./backend",
-    "dev:backend-mock-external-services": "npm run dev-mock-external-services --prefix ./backend"
+    "dev:backend-api": "npm run dev:api --prefix ./backend",
+    "dev:backend-worker": "npm run dev:worker --prefix ./backend",
+    "dev:backend-email-worker": "npm run dev:email-worker --prefix ./backend",
+    "dev:backend-mock-external-services": "npm run dev:mock-external-services --prefix ./backend"
   },
   "author": "ankaboot",
   "license": "AGPL-3.0",
