--- a/.env.master.prod
+++ b/.env.master.prod
@@ -87,6 +87,7 @@ REACHER_HOTMAIL_USE_HEADLESS = true
 # REACHER_MICROSOFT365_USE_API =
 REACHER_GMAIL_USE_API = true
 # REACHER_YAHOO_USE_API =
+REACHER_REQUESTS_PER_MINUTE = 60
 
 # Mailercheck:  https://developers.mailercheck.com/
 MAILERCHECK_API_KEY =
