--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -36,7 +36,7 @@ enabled = true
 # Port to use for Supabase Studio.
 port = 54323
 # External URL of the API server that frontend connects to.
-api_url = "http://127.0.0.1"
+api_url = "http://localhost"
 # OpenAI API Key to use for Supabase AI in the Supabase Studio.
 openai_api_key = "env(OPENAI_API_KEY)"
 
@@ -61,7 +61,7 @@ enabled = true
 # in emails.
 site_url = "http://localhost:8082"
 # A list of *exact* URLs that auth providers are permitted to redirect to post authentication.
-additional_redirect_urls = ["https://127.0.0.1:3000"]
+additional_redirect_urls = ["https://localhost:3000"]
 # How long tokens are valid for, in seconds. Defaults to 3600 (1 hour), maximum 604,800 (1 week).
 jwt_expiry = 3600
 # If disabled, the refresh token will never expire.
@@ -106,7 +106,7 @@ redirect_uri = ""
 url = ""
 [auth.external.azure]
 enabled = false
-# Default google credentials for local development only.
+# Default azure credentials for local development only.
 client_id = ""
 secret = ""
 # Overrides the default auth redirectUrl.
